# catalog-pgai

./: .agentignore  .editorconfig  .env.example  .gitignore  .opencodeignore  ANALYSIS_REPORT.md  CLAUDE.md  README.md  chat.py  claude-prompt.md  gemini-prompt.md  librarian-prompt.md  main.py  opencode.json  pyproject.toml  questions.md  schema.sql  worker.sh
